unpackaged/main/default/objects/SBQQ__ProductRule__c/fields/Product_Rule_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Rule_Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Product Rule Ext Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>