unpackaged/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__AdvancedCondition__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AdvancedCondition__c</fullName>
    <description>Can only be entered if the Conditions Met is Custom. Enter a combination of the Error Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</description>
    <inlineHelpText>Peut être saisi uniquement si Conditions remplies est Personnalisé. Saisissez une combinaison de numéros d&#39;index de condition d&#39;erreur, AND, OR, et des parenthèses (ex.: (123 AND 124) AND 125).</inlineHelpText>
    <label>Advanced Condition</label>
    <type>TextArea</type>
</CustomField>