unpackaged/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ErrorMessage__c</fullName>
    <description>Enter a message to displayed when rule is activated.  An error message will be displayed when a Validations is fired.  A warning message will be displayed when an Alert is fired. Does not apply to Filter rules.</description>
    <inlineHelpText>Saisissez le message à afficher lorsque la règle est activée. Un message d&#39;erreur est affiché lors du déclenchement d&#39;une validation. Un message d&#39;avertissement est affiché lors du déclenchement d&#39;une alerte. Ne s&#39;applique pas aux règles de filtrage.</inlineHelpText>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>