unpackaged/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__EvaluationOrder__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__EvaluationOrder__c</fullName>
    <description>Order in which this price rule is evaluated.</description>
    <inlineHelpText>Spécifiez l&#39;ordre d&#39;évaluation de cette règle de prix. Les règles de niveau supérieur sont évaluées en dernier, ce qui signifie qu&#39;elles « gagnent » en cas de conflit.</inlineHelpText>
    <label>Evaluation Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>