unpackaged/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__LookupMessageField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__LookupMessageField__c</fullName>
    <description>Field on Lookup Object corresponding to Product Rule Message. Field must be text.</description>
    <inlineHelpText>Champ de l&#39;objet de référence correspondant au message de règle produit. Le champ doit être de type texte.</inlineHelpText>
    <label>Lookup Message Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SBQQ__Message__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>