unpackaged/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__LookupRequiredField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__LookupRequiredField__c</fullName>
    <description>Field on Lookup Object corresponding to Product Action Required checkbox. Field must be checkbox.</description>
    <inlineHelpText>Champ de l&#39;objet de référence correspondant à la case Action produit requise. Le champ doit être de type case à cocher.</inlineHelpText>
    <label>Lookup Required Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SBQQ__Required__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>