unpackaged/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Type__c</fullName>
    <description>Type of rule. Validation displays error messages. Selection causes products to be added or suggested. Alert displays a warning, but requires no rectification. Filter refines option lookup results for Dynamic Bundles.</description>
    <inlineHelpText>Type de règle. « Validation » affiche des messages d&#39;erreur. « Sélection » entraîne l&#39;ajout ou la suggestion de produits. « Alerte » affiche un avertissement, mais ne demande aucune rectification. « Filtre » affine les résultats de référence d&#39;option pour les offres produits dynamiques.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Selection</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>